--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,4 +13,17 @@
     tools:context=".activities.MainActivity"
     tools:showIn="@layout/activity_main">
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/btn_create_circle_content_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/create_circle" />
+
+    <Button
+        android:id="@+id/btn_add_new_user_content_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/new_user" />
+
+
+</LinearLayout>
